--- a/best_flutter_ui_templates/pubspec.yaml
+++ b/best_flutter_ui_templates/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  #Audio player
+  audioplayer : 0.8.1
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -51,8 +54,6 @@ flutter:
   assets:
     - assets/images/
     - assets/design_course/
-    - assets/fitness_app/
-    - assets/hotel/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
