--- a/best_flutter_ui_templates/pubspec.yaml
+++ b/best_flutter_ui_templates/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
     sdk: flutter
 
   #Audio player
-  audioplayer : 0.8.1
+  audioplayers: ^0.17.4
 
 
   # The following adds the Cupertino Icons font to your application.
