--- a/best_flutter_ui_templates/pubspec.yaml
+++ b/best_flutter_ui_templates/pubspec.yaml
@@ -27,12 +27,9 @@ dependencies:
   #Audio player
   audioplayers: ^0.17.4
 
-  #HTTP for audio player test
-  http: ^0.13.0
-
   #For path audio
   path_provider: ^1.6.22
-  provider: 4.3.3
+  provider: any
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
