--- a/best_flutter_ui_templates/android/app/src/main/AndroidManifest.xml
+++ b/best_flutter_ui_templates/android/app/src/main/AndroidManifest.xml
@@ -7,8 +7,8 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="best_flutter_ui_templates"
-        android:icon="@mipmap/ic_launcher">
+        android:label="Pengenalan Bahasa Inggris"
+        android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
